--- a/frontend/src/components/Horoscopes/ProcessorProject/src/components/map/NorthMap.scss
+++ b/frontend/src/components/Horoscopes/ProcessorProject/src/components/map/NorthMap.scss
@@ -134,7 +134,6 @@
   overflow: hidden;
 
   .image {
-    z-index: -1;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -149,7 +148,7 @@
     font-size: 16px;
     line-height: 14px;
     text-align: center;
-    color: #5C5B9F;
+    color: var(--color-primary);
     width: 20px;
     z-index: 20;
   }
